--- a/public/styles/joey.css
+++ b/public/styles/joey.css
@@ -1,11 +1,10 @@
-
 body#LoginForm{ background-image:url("https://www.pixelstalk.net/wp-content/uploads/images2/Wallpaper-Dark-Green-Leave-Macro.jpg"); background-repeat:no-repeat; background-position:center; background-size:cover; padding:10px;}
 
-.form-heading { color:#fff; font-size:23px;}
+
 .panel h2{ color:#444444; font-size:18px; margin:0 0 8px 0;}
-.panel p { color:#777777; font-size:14px; margin-bottom:30px; line-height:24px;}
+.panel p { color:#1a1818; font-size:14px; margin-bottom:30px; line-height:24px;}
 .login-form .form-control {
-  background: #f7f7f7 none repeat scroll 0 0;
+  background: #ffffff none repeat scroll 0 0;
   border: 1px solid black;
   border-radius: 4px;
   font-size: 14px;
@@ -15,7 +14,7 @@ body#LoginForm{ background-image:url("https://www.pixelstalk.net/wp-content/uplo
 .main-div {
   background: #ffffff none repeat scroll 0 0;
   border-radius: 25px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin: 10px auto 30px;
   max-width: 38%;
   padding: 50px 70px 70px 71px;
@@ -24,30 +23,30 @@ body#LoginForm{ background-image:url("https://www.pixelstalk.net/wp-content/uplo
 .login-form .form-group {
   margin-bottom:10px;
 }
+
 .login-form{ text-align:center;}
 .forgot a {
   color: #000000;
-  font-size: 14px;
+  font-size: 18px;
   text-decoration: underline;
 }
 .login-form  .btn.btn-primary {
   background: #4ef084 none repeat scroll 0 0;
   border-color: #4ef084;
-  color: #ffffff;
-  font-size: 14px;
+  /* border: 1px solid black; */
+  border-radius: 15px;
+  color: #000000;
+  font-size: 18px;
   width: 100%;
   height: 50px;
   line-height: 50px;
   padding: 0;
 }
 .forgot {
-  text-align: left; margin-bottom:30px;
+  text-align: center; 
+  margin-bottom:30px;
 }
-.botto-text {
-  color: #ffffff;
-  font-size: 14px;
-  margin: auto;
-}
+
 .login-form .btn.btn-primary.reset {
   background: #5eff00 none repeat scroll 0 0;
 }
