--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,45 @@
-.list-group-item {
-  line-height: 2.5;
+
+body{
+  background: url("../images/background3.jpeg"); 
+ 
+ 
+}
+.navbar.bg-light{
+  background-color: rgba(11, 163, 28, 0.815) !important;
+
+  font-weight: bold;
+  padding: 10px;
+  border: 10px;
+  border-bottom-color: black 10px; 
+  border-top-color: black;
+  color: white;
+}
+
+.cards{
+  border: 4px solid;
+  color:black;
+}
+
+.card-img-top{
+  width: 70px;
+  height: 70px;
+  border: black solid;
+  background-color: lightgrey;
+ 
+}
+
+.navbar-brand{
+  font-style: italic;
+  font-size: 40px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  
+}
+.nav-item{
+  font-weight: bold;
+  color: black;
+}
+.btn{
+  border-top:black;
+  color: black;
+  font-style: italic; 
 }
