--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,40 @@
-<div class="card my-2">
-  <h5 class="card-header">Leaves</h5>
-  <div class="card-body">
-    <h1>{{data.anything }}</h1>
-    <ul class="list-group">
-        {{#each leafData}}
-          {{> leaves/leaf-card}}
-        {{/each}}
-    </ul>
-  </div>
-</div>
-
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
+
+<div class="row">
+
+  <div class="col-sm-3">
+    <div class="card">
+      <img class="card-img-top" src="/static/images/organic-food.png" alt="leaf">
+      <div class="card-body">
+        <h5 class="card-title">Card title that wraps to a new line</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.Lorem ipsum
+          dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit. Integer posuere erat a ante</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-6">
+    <div class="card my-2">
+      <h5 class="card-header">Leaves</h5>
+      <div class="card-body">
+        {{#each leafData}}
+        {{> leaves/leaf-card}}
+        {{/each}}
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-3">
+    <div class="card">
+      <img class="card-img-top" src="/static/images/sapling.png" alt="sapling">
+      <div class="card-body">
+        <h5 class="card-title">Card title that wraps to a new line</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.Lorem ipsum
+          dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit. Integer posuere erat a ante</p>
+      </div>
+    </div>
+  </div>
+</div>
