--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,9 +1,10 @@
-
-body{
-  background: url("../images/background3.jpeg"); 
- 
- 
+body {
+  background-image:url("../images/Wallpaper-Dark-Green-Leave-Macro.jpg");
+  background-repeat: repeat-y; 
+  background-position:top;
+  padding:10px;
 }
+
 .navbar.bg-light{
   background-color: rgba(11, 163, 28, 0.815) !important;
 
@@ -12,7 +13,7 @@ body{
   border: 10px;
   border-bottom-color: black 10px; 
   border-top-color: black;
-  color: white;
+  color: white  !important;
 }
 
 .cards{
@@ -25,7 +26,6 @@ body{
   height: 70px;
   border: black solid;
   background-color: lightgrey;
- 
 }
 
 .navbar-brand{
@@ -34,12 +34,31 @@ body{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   
 }
+
 .nav-item{
   font-weight: bold;
   color: black;
 }
+
 .btn{
   border-top:black;
   color: black;
   font-style: italic; 
+}
+
+.footer {
+  height: 2rem;
+  color: white;
+  font-size: small;
+  background-color: rgba(11, 163, 28, 0.815) !important;
+}
+
+.footer .muted-text {
+  font-size: x-small;
+  margin-left: 1rem;
+}
+
+.footer a,
+.footer a:visited {
+  color: white;
 }
