--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,36 +18,48 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     rossorigin="anonymous"></script>
 
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">Branches</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-  <div class="container">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Notifications</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search Branches" aria-label="Search">
+          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Leaf</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container content">
     <div class="row">
       <div class="col-sm-12">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">Branches</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Notifications</a>
-              </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search Branches" aria-label="Search">
-              <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Leaf</button>
-            </form>
-          </div>
-        </nav>
         {{{body}}}
       </div>
     </div>
   </div>
+
+  <footer class="footer bg-dark fixed-bottom">
+    <div class="container text-center text-md-left">
+      <div class="footer-copyright text-center mt-1">
+        <a href="/api/leaves">API Leaves List</a>
+        | <a href="https://github.com/et-nat1995/Project-2">GitHub</a>
+        <span class="muted-text">Copyright, Team Branches, 2018 ©</span>
+      </div>
+    </div>
+  </footer>
 
 
 </body>
