--- a/views/partials/leaves/leaf-card.handlebars
+++ b/views/partials/leaves/leaf-card.handlebars
@@ -1,4 +1,15 @@
-<li class="list-group-item">
-	<span class="text">{{text}}</span>
-</li>
-
+<div class="row">
+	<div class="col-md">
+		<div class="card">
+		  <div class="card-header">
+			<h1>	{{Branch.handle}} </h1>
+		  </div>
+		  <div class="card-body">
+		    <blockquote class="blockquote mb-0">
+		      <p class="textLeaf">{{text}}</p>
+		      <footer class="blockquote-footer"><cite title="Source Title">{{Branch.name}}</cite></footer>
+		    </blockquote>
+		  </div>
+		</div>
+	</div>
+</div>
