--- a/views/partials/leaves/leaf-card.handlebars
+++ b/views/partials/leaves/leaf-card.handlebars
@@ -1,8 +1,8 @@
 <div class="row">
 	<div class="col-md">
-		<div class="card">
+		<div class="card leaves">
 		  <div class="card-header">
-			<h1>	{{Branch.handle}} </h1>
+			<h5>	{{Branch.handle}} </h5>
 		  </div>
 		  <div class="card-body">
 		    <blockquote class="blockquote mb-0">
