--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,18 +7,20 @@
             <h2>Login to Branches</h2>
             <p>Please enter your email and password</p>
         </div>
-        <form id="Login">
+        <form id="login-form">
             <div class="form-group">
-                <input type="email" class="form-control" id="inputEmail" placeholder="Email Address">
+                <input type="email" class="form-control" id="email-input" placeholder="Email Address">
             </div>
-
             <div class="form-group">
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                <input type="password" class="form-control" id="password-input" placeholder="Password">
             </div>
             <div class="forgot">
-                <a href="reset.html">Forgot password?</a>
+                <a href="/reset">Forgot password?</a>
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
+            <div class="forgot">
+                <a href="/signup">Sign Up</a>
+            </div>
         </form>
     </div>
 </div>
