--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,5 +1,3 @@
-
-
 .panel h2{ color:#444444; font-size:18px; margin:0 0 8px 0;}
 .panel p { color:#1a1818; font-size:14px; margin-bottom:30px; line-height:24px;}
 .login-form .form-control {
@@ -10,6 +8,7 @@
   height: 50px;
   line-height: 50px; 
 }
+
 .main-div {
   background: #ffffff none repeat scroll 0 0;
   border-radius: 25px;
@@ -45,7 +44,7 @@
 
 .forgot {
   text-align: center; 
-  margin-bottom:30px;
+  margin:1.5rem auto;
 }
 
 .login-form .btn.btn-primary.reset {
