--- a/views/layouts/anon.handlebars
+++ b/views/layouts/anon.handlebars
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/static/styles/styles.css" media="screen" title="no title" charset="utf-8">
   <title>Branches</title>
 </head>
@@ -17,25 +16,6 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-branches">
     <div class="container">
       <a class="navbar-brand" href="#">Branches</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Notifications</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search Branches" aria-label="Search">
-          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Leaf</button>
-        </form>
-      </div>
     </div>
   </nav>
 
@@ -50,13 +30,11 @@
   <footer class="footer bg-dark fixed-bottom">
     <div class="container text-center text-md-left">
       <div class="footer-copyright text-center mt-1">
-        <a href="/api/leaves">API Leaves List</a>
-        | <a href="https://github.com/et-nat1995/Project-2">GitHub</a>
+        <a href="https://github.com/et-nat1995/Project-2">GitHub</a>
         <span class="muted-text">Copyright, Team Branches, 2018 ©</span>
       </div>
     </div>
   </footer>
-
 
 </body>
 
