--- a/views/partials/leaves/leaf-card.handlebars
+++ b/views/partials/leaves/leaf-card.handlebars
@@ -8,6 +8,9 @@
 		    <blockquote class="blockquote mb-0">
 		      <p class="textLeaf">{{text}}</p>
 		      <footer class="blockquote-footer"><cite title="Source Title">{{Branch.name}}</cite></footer>
+					<button data-id="{{id}}" data-likes="{{likes}}" type="button" class="btn btn-success btn-sm like">Like 
+						<span class="badge badge-light badge-likes" >{{likes}}</span>
+  					<span class="sr-only">unread messages</span></button>
 		    </blockquote>
 		  </div>
 		</div>
