--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,7 +43,7 @@
       <div class="card-body">
         <h5 class="card-title">Trending Branchs</h5>
         {{#each topBranchers}}
-        <li><a href="" data-id="{{id}}"> {{handle}} </a> </li>
+        <li><a href="/index?filterById={{id}}" > {{handle}} </a> </li>
         {{/each}}
       </div>
     </div>
