--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,8 +2,13 @@
 <div class="row">
 
   <div class="col-sm-3 my-3">
-    <div class="card topHash">
+    <div class="card profile">
       <img class="card-img-top" src="/static/images/organic-food.png" alt="leaf">
+      <div class="card-body">
+        <!-- put stuff here -->
+      </div>
+    </div>
+    <div class="card topHash">
       <div class="card-body">
         <h5 class="card-title">Trending Seeds</h5>
         {{#each topHashTags}}
