Bunch of add ons

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,15 +13,15 @@
     </div>
   </div>
 
-  <div class="col-sm-6">
+  <div class="col-sm-6 mb-3">
 
       <div class="card my-3">
       <h5 class="card-header">Post Something</h5>
       <div class="card-body">
         <form>
           <div class="form-group">
-            <textarea class="form-control mb-2" id="createPost" rows="3"></textarea>
-            <button for="createPost" type="button" class="btn btn-success">Make a Post</button>
+            <textarea class="form-control mb-2 postText" id="createPost" rows="3"></textarea>
+            <button for="createPost" type="button" class="btn btn-success postButton">Make a Post</button>
           </div>
         </form> 
       </div>
