--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,15 +25,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Notifications</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search Branches" aria-label="Search">
-          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Leaf</button>
+          <input class="form-control mr-sm-2 searchBranches" type="search" placeholder="Search Branches" aria-label="Search">
+          <button class="btn btn-outline-light my-2 my-sm-0 searchBranchesBTN" type="submit">Leaf</button>
         </form>
       </div>
     </div>
@@ -59,5 +59,7 @@
 
 
 </body>
+
+<script src="/static/js/main.js"></script>
 
 </html>
