--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -32,7 +32,21 @@ body {
   border: 4px solid;
   color:black;
 }
-
+#leaves-input{
+    font-size: x-small;
+    margin: 0px;
+    padding: 0px;
+}
+#saplings-input{
+    font-size: x-small;
+    margin: 0px;
+    padding: -10px;
+}
+#stems-input{
+    font-size: x-small;
+    margin: 0px;
+    padding: 0px;
+}
 .card-img-top{
   width: 70px;
   height: 70px;
