404 go home you be drunk fix

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm">
-                        <span id="leaves-count">0</span>
+                        <span id="leaves-count">{{leafCount.leafCount}}</span>
                     </div>
                     <div class="col-sm">
                         <span id="saplings-count">0</span>
