--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/profile">Profile</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Log Out</a>
+          </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2 searchBranches" type="search" placeholder="Search Branches" aria-label="Search">
