--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
             <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/profile">Profile</a>
+            {{!-- <a class="nav-link" href="/profile">Profile</a> --}}
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout">Log Out</a>
