removed unneeded connection

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,68 +1,68 @@
 <link rel="stylesheet" href="/static/styles/profile.css">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <a class="twPc-bg twPc-block"></a>
 
-                <div>
-                    <a title="blankblank" href="####################" class="user@link">
-                        <img alt="(user-name)" src="{{user.profileImgUrl}}"
-                            class="twPc-avatarImg">
-                    </a>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <a class="twPc-bg twPc-block"></a>
 
-                    <div class="twPc-divName">
-                        <h2>{{user.name}}</h2>
-                    </div>
+            <div>
+                <a title="blankblank" href="#" class="user@link">
+                    <img alt="(user-name)" src="{{user.profileImgUrl}}" class="twPc-avatarImg">
+                </a>
 
-                    <div class="twPc-divUser">
-                        <span>
-                            <a href="#################">@<span>{{user.handle}}</span></a>
-                        </span>
-                    </div>
+                <div class="twPc-divName">
+                    <h2>{{user.name}}</h2>
                 </div>
 
-            </div>
-            <div class="twPc-divStats">
-                <ul class="twPc-Arrange">
-                    <li class="twPc-ArrangeSizeFit">
-                        <div class="Arr-Bran">
-                            <a href="branches/branches" title="Branches">
-                                <span class="twPc-StatLabel twPc-block">Branches</span>
-                                <span class="twPc-StatValue">000</span>
-                            </a>
-                        </div>
-                    </li>
-                    <li class="twPc-ArrangeSizeFit">
-                        <div class="Arr-Foll">
-                            <a href="branches/following" title="Following">
-                                <span class="twPc-StatLabel twPc-block">Stems</span>
-                                <span class="twPc-StatValue">000</span>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="twPc-ArrangeSizeFit">
-                        <div class="Arr-Seed">
-                            <a href="branches/followers" title="Seedling">
-                                <span class="twPc-StatLabel twPc-block">Seedlings</span>
-                                <span class="twPc-StatValue">000</span>
-                            </a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="insert">
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <!-- <span class="input-group-text"></span> -->
-                    </div>
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="inputGroupFile01">
-                        <label class="custom-file-label" for="inputGroupFile01"></label>
-                    </div>
+                <div class="twPc-divUser">
+                    <span>
+                        <a href="#">@<span>{{user.handle}}</span></a>
+                    </span>
                 </div>
             </div>
 
         </div>
-        <h3><span class="Posts" style="text-decoration: underline;">Branches</span></h3>
+        <div class="twPc-divStats">
+            <ul class="twPc-Arrange">
+                <li class="twPc-ArrangeSizeFit">
+                    <div class="Arr-Bran">
+                        <a href="branches/branches" title="Branches">
+                            <span class="twPc-StatLabel twPc-block">Branches</span>
+                            <span class="twPc-StatValue">000</span>
+                        </a>
+                    </div>
+                </li>
+                <li class="twPc-ArrangeSizeFit">
+                    <div class="Arr-Foll">
+                        <a href="branches/following" title="Following">
+                            <span class="twPc-StatLabel twPc-block">Stems</span>
+                            <span class="twPc-StatValue">000</span>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="twPc-ArrangeSizeFit">
+                    <div class="Arr-Seed">
+                        <a href="branches/followers" title="Seedling">
+                            <span class="twPc-StatLabel twPc-block">Seedlings</span>
+                            <span class="twPc-StatValue">000</span>
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="insert">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <!-- <span class="input-group-text"></span> -->
+                </div>
+                <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="inputGroupFile01">
+                    <label class="custom-file-label" for="inputGroupFile01"></label>
+                </div>
+            </div>
+        </div>
+
     </div>
+    <h3><span class="Posts" style="text-decoration: underline;">Branches</span></h3>
+</div>
